demo text duplication removed, angular picture position fine tuned

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             <p>Tkinter, Flask | Pandas, Numpy, Matplotlib, Plotly, Scikit learn, Seaborn | Beautiful Soup, Selenium | See Github, Colab link below for projects</p>
         </div>
         <div class="skill-row">
-            <img class="skill1-image" src="images/angular_img.png" alt="skills">
             <a class="angular_link" href="https://www.youtube.com/watch?v=2sIv3kX-A-Y&ab_channel=Szab%C3%B3Gerg%C5%91">
+                <img class="angular-image" src="images/angular_img.png" alt="skills">
                 <h3>Angular</h3>
-                <p>Click to view Progmasters bootcamp final project demo video demo with Angular frontend</p>
+                <p>Click to view Progmasters bootcamp final project demo video with Angular frontend</p>
             </a>
         </div>
         <div class="skill-row">
